--- a/be/game_server/build.gradle
+++ b/be/game_server/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.3.1'
     id 'io.spring.dependency-management' version '1.1.5'
+    id 'io.sentry.jvm.gradle' version '4.10.0'
 }
 
 group = 'com.ssafy.a410'
@@ -36,6 +37,16 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+}
+
+sentry {
+    // JVM 소스 번들을 만들어 Sentry에 업로드
+    // Sentry가 소스 코드를 참조할 수 있도록 함으로써 Stack trac에서 소스 코드를 확인할 수 있게 됨
+    includeSourceContext = true
+
+    org = 'a410'
+    projectName = 'hide-and-seek-staging'
+    authToken = System.getenv("SENTRY_AUTH_TOKEN")
 }
 
 tasks.named('test') {
