--- a/fe/package.json
+++ b/fe/package.json
@@ -25,6 +25,7 @@
         "build": "vite build --config vite/config.prod.mjs"
     },
     "dependencies": {
+        "@stomp/stompjs": "^7.0.0",
         "phaser": "3.80.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
