--- a/lab/fe/001_stomp_client/package.json
+++ b/lab/fe/001_stomp_client/package.json
@@ -5,10 +5,13 @@
   "type": "module",
   "dependencies": {
     "@stomp/stompjs": "^7.0.0",
+    "axios": "^1.7.2",
+    "nodemon": "^3.1.4",
     "ws": "^8.18.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
