--- a/fe/package.json
+++ b/fe/package.json
@@ -25,12 +25,17 @@
         "build": "vite build --config vite/config.prod.mjs"
     },
     "dependencies": {
+        "@babel/core": "^7.24.9",
         "@stomp/stompjs": "^7.0.0",
+        "babel-loader": "^9.1.3",
+        "css-loader": "^7.1.2",
         "phaser": "3.80.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-icons": "^5.2.1",
-        "react-router-dom": "^6.25.1"
+        "react-router-dom": "^6.25.1",
+        "webpack": "^5.93.0",
+        "webpack-cli": "^5.1.4"
     },
     "devDependencies": {
         "@types/react": "^18.3.3",
