--- a/fe/package.json
+++ b/fe/package.json
@@ -26,13 +26,16 @@
     },
     "dependencies": {
         "@babel/core": "^7.24.9",
+        "@reduxjs/toolkit": "^2.2.7",
         "@stomp/stompjs": "^7.0.0",
+        "axios": "^1.7.2",
         "babel-loader": "^9.1.3",
         "css-loader": "^7.1.2",
         "phaser": "3.80.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-icons": "^5.2.1",
+        "react-redux": "^9.1.2",
         "react-router-dom": "^6.25.1",
         "webpack": "^5.93.0",
         "webpack-cli": "^5.1.4"
