--- a/fe/package.json
+++ b/fe/package.json
@@ -38,7 +38,8 @@
         "react-redux": "^9.1.2",
         "react-router-dom": "^6.25.1",
         "webpack": "^5.93.0",
-        "webpack-cli": "^5.1.4"
+        "webpack-cli": "^5.1.4",
+        "ws": "^8.18.0"
     },
     "devDependencies": {
         "@types/react": "^18.3.3",
