--- a/fe/package.json
+++ b/fe/package.json
@@ -28,6 +28,7 @@
         "@babel/core": "^7.24.9",
         "@reduxjs/toolkit": "^2.2.7",
         "@stomp/stompjs": "^7.0.0",
+        "async-mutex": "^0.5.0",
         "axios": "^1.7.2",
         "babel-loader": "^9.1.3",
         "css-loader": "^7.1.2",
