--- a/fe/package.json
+++ b/fe/package.json
@@ -39,6 +39,7 @@
         "react-redux": "^9.1.2",
         "react-router-dom": "^6.25.1",
         "react-toastify": "^10.0.5",
+        "uuid": "^10.0.0",
         "webpack": "^5.93.0",
         "webpack-cli": "^5.1.4",
         "ws": "^8.18.0"
