--- a/fe/package.json
+++ b/fe/package.json
@@ -28,6 +28,7 @@
         "@babel/core": "^7.24.9",
         "@reduxjs/toolkit": "^2.2.7",
         "@stomp/stompjs": "^7.0.0",
+        "@tanstack/react-query": "^5.51.23",
         "async-mutex": "^0.5.0",
         "axios": "^1.7.2",
         "babel-loader": "^9.1.3",
@@ -36,6 +37,7 @@
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-icons": "^5.2.1",
+        "react-intersection-observer": "^9.13.0",
         "react-redux": "^9.1.2",
         "react-router-dom": "^6.25.1",
         "react-toastify": "^10.0.5",
