--- a/fe/package.json
+++ b/fe/package.json
@@ -38,6 +38,7 @@
         "react-dom": "^18.3.1",
         "react-icons": "^5.2.1",
         "react-intersection-observer": "^9.13.0",
+        "react-modal": "^3.16.1",
         "react-redux": "^9.1.2",
         "react-router-dom": "^6.25.1",
         "react-toastify": "^10.0.5",
